freebsd-glue (0.2.16) UNRELEASED; urgency=low

  * Only include <sys/sysctl.h> when needed (should fix FTBFS on
    hurd-i386).
  * Add __ELF_WORD_SIZE to <machine/__get_elf_arch.h>.

 -- Robert Millan <rmh@debian.org>  Wed, 08 Jan 2014 12:59:25 +0100

freebsd-glue (0.2.15) unstable; urgency=low

  * Fix /usr/lib/freebsd/bmake permissions.
  * Make the libbsd-dev B-D explicit now that freebsd-buildutils doesn't
    pull it.

 -- Robert Millan <rmh@debian.org>  Wed, 08 Jan 2014 02:09:59 +0100

freebsd-glue (0.2.14) unstable; urgency=low

  * Add <sys/elf.h>.
  * Switch to bmake, and finish breaking the circular build-dependency
    on freebsd-buildutils.

 -- Robert Millan <rmh@debian.org>  Wed, 08 Jan 2014 01:30:59 +0100

freebsd-glue (0.2.13) unstable; urgency=low

  * Explicitly request gcc-4.8 as sbuild can't handle build dependencies
    properly (sigh).

 -- Robert Millan <rmh@debian.org>  Thu, 02 Jan 2014 20:15:04 +0100

freebsd-glue (0.2.12) unstable; urgency=low

  * Invoke FreeBSD make explicitly as fmake.

 -- Robert Millan <rmh@debian.org>  Thu, 02 Jan 2014 19:47:27 +0100

freebsd-glue (0.2.11) unstable; urgency=low

  * Yet another attempt at fixing FTBFS with older freebsd-buildutils...

 -- Robert Millan <rmh@debian.org>  Thu, 02 Jan 2014 18:41:42 +0100

freebsd-glue (0.2.10) unstable; urgency=low

  * Attempt to use fmake, then fallback to make (in /usr/lib/freebsd).
    This garantees FreeBSD make no matter which freebsd-buildutils we're
    using.

 -- Robert Millan <rmh@debian.org>  Thu, 02 Jan 2014 18:17:49 +0100

freebsd-glue (0.2.9) unstable; urgency=low

  * sysarch.c: Avoid conflicting declarations in <machine/sysarch.h>.
  * Require GCC 4.8 or later to fix FTBFS on ia64, powerpc and sparc.

 -- Robert Millan <rmh@debian.org>  Thu, 02 Jan 2014 17:52:03 +0100

freebsd-glue (0.2.8) unstable; urgency=low

  * Correctly setup BSD version of MAKEFLAGS to support parallel builds.
  * Provide legacy symlinks for make and mtree (for now, fmake and