@@ -15,6 +15,17 @@
 /* FreeBSD code expects that this file includes... */
 #  include <sys/types.h>
 
+/* FreeBSD-specific clocks. Attempt to map them to portable macros (but
+   make sure the calls fail when this mapping would not be reliable) */
+#define CLOCK_UPTIME			(-1)
+#define CLOCK_UPTIME_PRECISE		(-1)
+#define CLOCK_UPTIME_FAST		(-1)
+#define CLOCK_REALTIME_PRECISE		CLOCK_REALTIME
+#define CLOCK_REALTIME_FAST		CLOCK_REALTIME_COARSE
+#define CLOCK_MONOTONIC_PRECISE		CLOCK_MONOTONIC
+#define CLOCK_MONOTONIC_FAST		CLOCK_MONOTONIC_COARSE
+#define CLOCK_SECOND			(-1)
+
 #endif /* _SYS_TIME_H_ */
 
 #endif /* __FreeBSD_kernel__ */
